--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     //compile for picasso
     compile 'com.android.support:appcompat-v7:25.3.1'
+
+    //compile for ucrop
+    compile 'com.github.yalantis:ucrop:2.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
