--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,8 @@ dependencies {
     compile 'com.github.yalantis:ucrop:2.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'realm-android' //todo realm apply plugin
